Update composer.json, change faker

--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         }
     ],
     "require": {
-        "fzaninotto/faker": "^1.8"
+        "fakerphp/faker": "^1.8"
     },
     "autoload": {
         "psr-4": {
